# rust-concepts

./: .env.example  .gitignore  Cargo.toml  rustfmt.toml
benchmarks/: Cargo.toml
benchmarks/core_results/: 10_threads_axum_json_response.txt  single_thread_axum_json_response.txt
benchmarks/results/: benchmark_20250416_144822.txt  benchmark_20250416_154546.txt  benchmark_20250416_155406.txt  benchmark_20250417_085847.txt  benchmark_20250417_090018.txt  benchmark_20250417_090234.txt  benchmark_20250417_090428.txt  benchmark_20250417_090546.txt  benchmark_20250417_090630.txt  benchmark_20250417_115822.txt  benchmark_20250417_125305.txt  benchmark_20250417_130722.txt  benchmark_20250417_132327.txt  benchmark_20250417_153732.txt  benchmark_20250417_154006.txt
benchmarks/src/: main.rs
src/: main.rs
src/actix/: 1 - Hello World.rs  2 - Json Response.rs  api_errors.rs
src/axum_examples/: 1 - Json Response.rs  2 - Axum + Oracle.rs  api_errors.rs
src/concepts/: 3 - Add Gigasecond.rs
src/data/: Cripple Detalhado por Chassi.xlsx
src/exercism/: 1 - Hello World.rs  2 - Reverse String.rs  3 - Add Gigasecond.rs  4 - Hours & Minutes Clock.rs
src/oracle/: 1 - Simple Connection With Polars.rs  2 - Query to csv.rs  connection.rs
src/polars/: 1 - Simple Example.rs  2 - Read Excel.rs  3 - DataFrame to Json.rs  4 - DataFrame to Json 2.rs
src/utils/: mod.rs  polars_df_to_json.rs
src/xitca/: 1 - Hello World.rs  2 - Json Response.rs
