[package]
name = "rust-concepts"
version = "0.1.0"
edition = "2021"

[dependencies]
time = "=0.3.41"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
xitca-web = { version = "0.7.1" , features = ["logger", "json"]}
polars = { version = "0.46.0", features = ["lazy", "serde", "json"] }
chrono = "0.4.40"
calamine = "0.25"
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["full"] }
polars-sql = "0.46.0"
thiserror   = "1.0"    # ← Crie esta linha
dotenv = "0.15"           # Carrega o arquivo .env
oracle = "0.6"            # Cliente Oracle para Rust (confira a versão atual)
log = "0.4"               # Logging
env_logger = "0.9"        # Inicializador do log
once_cell = "1.21.3"
axum = "0.8.3"
dotenvy = "0.15"
clap    = { version = "4.1", features = ["derive"] }
colored     = "2.0"
console     = "0.15"
futures     = "0.3"
indicatif   = "0.17"
rand        = "0.8"
reqwest     = { version = "0.11", features = ["json", "stream"] }