[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
statistics = "0.4"
colored = "2.0"
num_cpus = "1.16"
rand = "0.8" 